--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <header>
+      Markdown Previewer
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
