--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Markdown Previewer
     </header>
     <div id="root"></div>
+    <footer></footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
